--- a/app.json
+++ b/app.json
@@ -1,24 +1,15 @@
 {
   "expo": {
-    "name": "client",
-    "slug": "client",
+    "name": "QR Door",
+    "slug": "qr-door",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "client",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": false,
     "jsEngine": "hermes",
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.yourcompany.client",
-      "infoPlist": {
-        "NSCameraUsageDescription": "Esta app necesita acceso a la cámara para funcionar como videoportero",
-        "NSMicrophoneUsageDescription": "Esta app necesita acceso al micrófono para comunicarse con visitantes",
-        "UIBackgroundModes": ["audio", "remote-notification"]
-      }
-    },
     "android": {
+      "package": "com.yourcompany.qrdoor",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
@@ -28,18 +19,9 @@
         "RECORD_AUDIO",
         "android.permission.CAMERA",
         "android.permission.RECORD_AUDIO",
-        "android.permission.POST_NOTIFICATIONS",
-        "android.permission.VIBRATE",
-        "android.permission.WAKE_LOCK",
         "android.permission.INTERNET",
-        "android.permission.ACCESS_NETWORK_STATE"
-      ],
-      "package": "com.yourcompany.client"
-    },
-    "web": {
-      "output": "static",
-      "favicon": "./assets/images/favicon.png",
-      "bundler": "metro"
+        "android.permission.VIBRATE"
+      ]
     },
     "plugins": [
       "expo-router",
@@ -49,47 +31,26 @@
           "launchMode": "most-recent"
         }
       ],
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
-          "dark": {
-            "backgroundColor": "#000000"
-          }
-        }
-      ],
+      "expo-camera",
       [
         "expo-notifications",
         {
           "icon": "./assets/images/icon.png",
-          "color": "#7D1522",
-          "defaultChannel": "default"
+          "color": "#7D1522"
         }
-      ],
-      "expo-camera",
-      "expo-av"
+      ]
     ],
-    "experiments": {
-      "typedRoutes": true
-    },
     "extra": {
       "router": {
         "origin": false
       },
       "eas": {
-        "projectId": "c64225ba-3691-477e-a665-2f3953bf3b2f"
+        "projectId": "a15c1b1f-ad22-4eb7-bddc-66266cac2cce"
       }
     },
     "owner": "jcanepa",
     "runtimeVersion": {
       "policy": "sdkVersion"
-    },
-    "updates": {
-      "url": "https://u.expo.dev/c64225ba-3691-477e-a665-2f3953bf3b2f",
-      "fallbackToCacheTimeout": 0
     }
   }
 }
