--- a/eas.json
+++ b/eas.json
@@ -1,15 +1,25 @@
 {
+  "cli": {
+    "version": ">= 16.0.0"
+  },
   "build": {
     "development": {
       "developmentClient": true,
       "distribution": "internal",
       "android": {
+        "gradleCommand": ":app:assembleDebug"
+      }
+    },
+    "preview": {
+      "distribution": "internal",
+      "android": {
         "buildType": "apk"
       }
+    },
+    "production": {
+      "android": {
+        "buildType": "app-bundle"
+      }
     }
-  },
-  "cli": {
-    "version": ">= 16.0.0",
-    "appVersionSource": "remote"
   }
 }
