--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
+    "start": "expo start --clear",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "clean": "rm -rf node_modules package-lock.json",
+    "reinstall": "npm run clean && npm install"
   },
   "dependencies": {
     "@expo-google-fonts/bai-jamjuree": "^0.4.1",
@@ -29,11 +29,11 @@
     "expo-dev-client": "~6.0.18",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.10",
+    "expo-image": "^3.0.10",
     "expo-linking": "~8.0.9",
-    "expo-notifications": "^0.32.13",
+    "expo-notifications": "0.28.0",
     "expo-router": "^6.0.15",
-    "expo-splash-screen": "^31.0.11",
+    "expo-splash-screen": "^0.29.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
@@ -46,7 +46,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
-    "react-native-webrtc": "^111.0.0",
+    "react-native-webrtc": "^111.0.6",
     "react-native-worklets": "^0.6.1",
     "socket.io-client": "^4.8.1"
   },
