--- a/package.json
+++ b/package.json
@@ -13,16 +13,15 @@
   "dependencies": {
     "@expo-google-fonts/bai-jamjuree": "^0.4.1",
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
-    "@react-navigation/elements": "^2.6.3",
+    "@react-navigation/elements": "1.3.30",
     "@react-navigation/native": "^7.1.8",
     "ajv": "^8.12.0",
     "ajv-keywords": "^5.1.0",
     "axios": "^1.13.2",
     "expo": "^54.0.25",
     "expo-asset": "~12.0.10",
-    "expo-audio": "~1.0.15",
     "expo-av": "~16.0.7",
     "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.10",
@@ -31,9 +30,9 @@
     "expo-haptics": "~15.0.7",
     "expo-image": "^3.0.10",
     "expo-linking": "~8.0.9",
-    "expo-notifications": "0.28.0",
+    "expo-notifications": "~0.32.13",
     "expo-router": "^6.0.15",
-    "expo-splash-screen": "^0.29.10",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
@@ -43,11 +42,11 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "~5.6.0",
+    "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
     "react-native-webrtc": "^111.0.6",
-    "react-native-worklets": "^0.6.1",
+    "react-native-worklets": "0.5.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
