--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "reinstall": "npm run clean && npm install"
   },
   "dependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-export-namespace-from": "^7.27.1",
+    "@babel/preset-env": "^7.28.5",
     "@expo-google-fonts/bai-jamjuree": "^0.4.1",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -22,10 +25,11 @@
     "axios": "^1.13.2",
     "expo": "^54.0.25",
     "expo-asset": "~12.0.10",
-    "expo-av": "~16.0.7",
+    "expo-av": "~16.0.8",
+    "expo-build-properties": "~1.0.10",
     "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.10",
-    "expo-dev-client": "~6.0.18",
+    "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "^3.0.10",
@@ -42,7 +46,7 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "^5.6.2",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
     "react-native-webrtc": "^111.0.6",
